force-app/main/default/objects/Batalha__c/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Data de início da Batalha.</description>
    <inlineHelpText>Data de início da Batalha.</inlineHelpText>
    <label>Data de Início</label>
    <type>Date</type>
</CustomField>