force-app/main/default/objects/Batalha__c/fields/DataTermino__c.field-meta.xml
<CustomField>
    <fullName>DataTermino__c</fullName>
    <description>Data do final da Batalha</description>
    <inlineHelpText>Data do final da Batalha</inlineHelpText>
    <label>Data de Termino</label>
    <type>Date</type>
</CustomField>