force-app/main/default/objects/Batalha__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descrição da Batalha.</description>
    <inlineHelpText>Descreve a Batalha.</inlineHelpText>
    <label>Descrição</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>