force-app/main/default/objects/Batalha__c/fields/StatusBatalha__c.field-meta.xml
<CustomField>
    <fullName>StatusBatalha__c</fullName>
    <description>Andamento da Batalha</description>
    <inlineHelpText>Andamento da Batalha</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não iniciada</fullName>
                <default>true</default>
                <label>Não iniciada</label>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Fechada</fullName>
            </value>
            <value>
                <fullName>Fechada e Ganha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>